# forest

./: .gitignore  CMakeLists.txt  ]
src/: main.cpp
src/forest/: BinaryTree.cpp  BinaryTree.h  Node.h  preorder.cpp
